# FINE

./: .coverage  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .travis.yml  0.3.1  CITATION.cff  CODE_OF_CONDUCT.md  Dockerfile  EDA.ipynb  EDA_time_series_aggregated .ipynb  LICENSE.txt  MANIFEST.in  Partition_based_clustering .ipynb  README.md  clustering_based_on_correlation.ipynb  correlation_analysis .ipynb  environment.yml  environment_dev.yml  firstStage  log_2020  log_2025  log_2030  my_esm.nc  pyproject.toml  relaxedProblem  requirements.txt  requirements.yml  requirements_dev.yml  requirements_frozen.yml  scenarioOutput.xlsx  scenarioOutput_industrialSite.xlsx  secondStage  setup.py  test_esM.nc
.github/workflows/: test.yml
.gitlab/issue_templates/: bug_template.md  feature_template.md  issue_template.md
.gitlab/merge_request_templates/: FWD.md
FINE/: __init__.py  component.py  conversion.py  conversionModeling.py  energySystemModel.py  optexcel.py  sourceSink.py  sourceSinkModeling.py  storage.py  storageModeling.py  transmission.py  transmissionModeling.py  utils.py
FINE/IOManagement/: __init__.py  dictIO.py  exploitOutput.py  netcdfIO.py  orig_xarrayIO.py  plot.py  standardIO.py  utilsIO.py  xarrayIO.py  xarrayIO_spagat.py  xarray_io.py
FINE/expansionModules/: __init__.py  optimizeTSAmultiStage.py  robustPipelineSizing.py  transformationPath.py
FINE/outputManagement/: __init__.py  standardOutputs.py
FINE/spagat/: RE_representation.py  RE_representation_utils.py  dataset.py  grouping.py  grouping_utils.py  manager.py  representation.py  representation_utils.py  spatial_aggregation.py  utils.py
FINE/subclasses/: DSM.py  __init__.py  commodityWithQuadraticCosts.py  conversionDynamic.py  conversionFancy.py  conversionPartLoad.py  lopf.py  storageExt.py
doc/: .gitlab-ci.yml  GeneralDetailedInstallationInstructions.txt
doc/source/: api.rst  conf.py  getting_started_doc.md  getting_started_doc.rst  index.rst  io.md  io.rst  io_doc.rst  legal_notice_doc.md  legal_notice_doc.rst  spagat_manager.rst
docs/: GeneralDetailedInstallationInstructions.txt  Makefile  make.html
docs/FeatureSlides/: 20210114FINE_AutarkyConstraint.pptx  FINE_SPAGAT_-_1_slide.pptx
docs/source/: IODoc.rst  RE_representationDoc.rst  aboutUsDoc.rst  componentsDoc.rst  componentsIntroDoc.rst  conf.py  conversionPartLoadClassDoc.rst  energySystemModelDoc.rst  examplesDoc.rst  expansionModulesDoc.rst  furtherReadingDoc.rst  gettingStartedDoc.rst  groupingDoc.rst  index.html  index.rst  installationDoc.rst  integratedSoftwareDoc.rst  legalNoticeDoc.rst  lopfClassDoc.rst  mathematicalBackgroundDoc.rst  mathematicalDescriptionsDoc.rst  newsDoc.rst  optimizeTSAmultiStageDoc.rst  outputManagerDoc.rst  purposeAndVisionDoc.rst  purposeDoc.rst  representationDoc.rst  robustPipelineSizingDoc.rst  sourceSinkClassDoc.rst  spagatDoc.rst  spatial_aggregationDoc.rst  structureOfFINEDoc.rst  transformationPathDoc.rst  tutorialDoc.rst  usersGuideDoc.rst
example/: Class and function descriptions.ipynb  Multi-regional Energy System Workflow.ipynb  Multi-regional Energy Workflow.ipynb  Water Supply System.ipynb  getData.py  job
examples/: Class and function descriptions.ipynb  Mini_System.ipynb  experimental_netCDF_stuff.ipynb
examples/00_Tutorial/: 00_Tutorial.ipynb  scenarioInput.xlsx
experiments/: 01_ClusterRegions.ipynb  DictIO.ipynb  IOManagement.ipynb  RE_representation_Generalization.ipynb  allFunctions_xarrayio-checkpoint.ipynb  allFunctions_xarrayio.ipynb  distance_based.ipynb  exportToDict.ipynb  grouping.ipynb  groupingResult_15reg.dbf  groupingResult_15reg.shx  parallelization.ipynb  sds_regions.dbf  sds_regions.shx  sklearn_hiearchical_clustering.ipynb  test_dimensional_data_to_xarray_dataset_minimal.ipynb  test_shp.dbf  test_shp.prj  test_shp.shp  test_shp.shx  test_spatial_aggregation_multinode.ipynb  test_weighted_mean_representation-checkpoint.ipynb  to_learn_Python.ipynb  weights_during_grouping.ipynb  xarray_unfunc.ipynb
fine/: __init__.py  component.py  conversion.py  energySystemModel.py  sourceSink.py  storage.py  transmission.py  utils.py  utilsETL.py
local/: Class and function descriptions.ipynb  Multi-regional Energy System Workflow.ipynb  job  testOut.xlsx
paper/: FINE-literature.bib  paper.md
spagat/: dataset.py  grouping.py  grouping_utils.py  manager.py  representation.py  utils.py
spagat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py  _test_pressureDrop.py  conf.py  conftest.py  scenarioOutput.xlsx  scenarioOutput_industrialSite.xlsx  scenarioOutput_industrialSite_constant_AEC_PECEM.xlsx  scenarioOutput_industrialSite_constant_just_AEC.xlsx  scenarioOutput_industrialSite_part_load_2steps.xlsx  scenarioOutput_industrialSite_part_load_3steps.xlsx  scenarioOutput_industrialSite_part_load_justAEC_4steps.xlsx  test_DSM.py  test_QPinvest.py  test_TSAmultiStage.py  test_autarkyConstraint.py  test_balanceLimit.py  test_commodityConversionFactors.py  test_commodityConversionFactorsTimeSeries.py  test_commodityCostTimeSeries.py  test_conversionPartLoad.py  test_conversiondynamic.py  test_endogenousTechnologicalLearning.py  test_errorBoundingApproach.py  test_esM.nc  test_exportESM.py  test_fixtures.py  test_flexibleConversion.py  test_flowLimit.py  test_full_load_hours.py  test_industrialSite_partLoad.py  test_industrialSite_partLoad_function.py  test_industrialSite_partLoad_raw_data.py  test_initTransmission.py  test_leanModel.py  test_linkedQuantity.py  test_lowerLimitConstraint.py  test_miniSystem.py  test_miniSystem_part_load.py  test_minimumDownTime.py  test_minimumPartLoad.py  (+22 more)
testing/: Multi-regional Energy System Workflow.ipynb  Testing with old model.ipynb  oldClusterData.csv  theday.csv  tmp3vo5s9fp.gurobi.txt  tmp3wbwdzby.gurobi.txt  tmp4fks04f0.gurobi.txt  tmp4xofcmc5.pyomo.lp  tmpb47hpvgm.pyomo.lp  tmpcaa1vjtg.pyomo.lp  tmpduduo85n.gurobi.txt  tmppckfniwo.pyomo.lp  tmppfnbqntz.gurobi.txt  tmpxyq9qxo3.gurobi.txt
tests/: conftest.py  test_dataset.py  test_grouping.py  test_manager.py  test_representation.py
(+460 files in other folders)
