[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "fine"
version = "2.4.0"
description = "Framework for integrated energy systems assessment"
readme = "README.md"
authors = [
    { name = "Johannes Behrens", email = "j.behrens@fz-juelich.de"},
    { name = "Theresa Groß", email = "t.gross@fz-juelich.de" },
]
maintainers = [
    { name = "Johannes Behrens", email = "j.behrens@fz-juelich.de"},
    { name = "Theresa Groß", email = "t.gross@fz-juelich.de" },
]
license = { file = "LICENSE" }

classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["energy assesment", "energy system", "optimization"]
dependencies = [
    "geopandas<=0.14.4",
    "openpyxl<=3.1.5",
    "matplotlib<=3.9.2",
    "xlrd<=2.0.1",
    "pyomo<=6.8.0",
    "numpy<=1.26.4",
    "pandas>=2,<=2.2.3",
    "scipy<=1.14.1",
    "scikit-learn>=1.2,<=1.5.2",
    "xarray<=2024.3",
    "rasterio<=1.4.1",
    "netcdf4<=1.7.2",
    "tsam",
    "pwlf<=2.2.1",
    "psutil<=5.9.8",
    "gurobi-logtools<=3.1.0",
    "ipykernel<=6.29.5",
]

requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
develop = [
    "sphinx<=7.4.4",
    "sphinx_rtd_theme<=2.0.0",
    "myst-parser<=2.0.0",
    "pytest<=8.3.3",
    "pytest-cov<=4.1.0",
    "pytest-xdist<=3.6.1",
    "nbval<=0.11.0",
    "ruff<0.7.0",
]

#Configureation options
# https://docs.pytest.org/en/7.1.x/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["test"]
console_output_style = "progress"
# How to configure Filterwarning:
# https://docs.python.org/3/library/warnings.html#warning-filter
# action:message:category:module:line
# Omit a field by add ing ":" for each omitted field
# Actions are: "default"
# "error", "ignore", "always", "module", "once"
filterwarnings = []

[project.urls]
homepage = "https://www.fz-juelich.de/de/iek/iek-3/forschung/open-source/fine"
repository = "https://github.com/FZJ-IEK3-VSA/FINE"
documentation = "https://vsa-fine.readthedocs.io/en/master/"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "PL"]
# See https://docs.astral.sh/ruff/rules for explanations
ignore = [
    "F403",    # ‘from module import *’ used; unable to detect undefined names
    "PLR0913", # Too many arguments in function definition ( > 5)
    "PLR0912", # Too many branches ( > 12) (if, else statements)
    "PLR0915", # Too many statements ( > 50)
    "PLR0911", # Too many return statements ( > 6)
    "PLR2004", # Magic value used in comparison, consider replacing `2` with a constant variable
    "PLR1714", # Consider merging multiple comparisons. Use a `set` if the elements are hashable.
]
